crates/teleport/tests/compile-fail/bare_bigint_return.stderr
error: `i64` is not supported as a bare output type
         JavaScript's `number` loses precision above 2^53, so teleport-rs
         serialises 64-bit integers as JSON strings. The `#[teleport_type]`
         macro handles this automatically for struct *fields*, but bare
         primitive returns would produce a runtime type mismatch.

         Wrap the value in a struct:

         #[teleport_type]
         pub struct i64Result {
         pub value: i64,
         }

         Or return a plain `String` / `i32` if you don't need 64-bit precision.
  --> tests/compile-fail/bare_bigint_return.rs:12:43
   |
12 | async fn bare_i64(_ctx: &State) -> Result<i64, AppError> {
   |                                           ^^^

warning: unused import: `AppError`
 --> tests/compile-fail/bare_bigint_return.rs:6:16
  |
6 | use teleport::{AppError, remote};
  |                ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
